# Chokefish

./: .gitignore  CMakeLists.txt  bitboard.h  piece.h  shared_random.h
engine/: .gitignore  CMakeLists.txt
engine/src/host/: app.c
engine/src/modules/ai/: CMakeLists.txt  engine.c  evaluation.h  search.h  search_result.c  search_result.h  search_v0.c  time_manager.c  types.h
engine/src/modules/core/: CMakeLists.txt  bitboard.c  bitboard.h  board.c  board.h  castling.c  castling.h  collection_implementations.c  color.c  color.h  concurrency.h  consts.h  dynamic_collections.h  enhanced_time.c  enhanced_time.h  game_state.c  game_state.h  logging.h  move.c  move.h  move_generation_result.c  move_generation_result.h  move_generator.c  move_generator.h  piece.c  piece.h  piece_group.c  piece_group.h  position.c  position.h  precomputed_board_data.c  precomputed_board_data.h  shared_random.c  shared_random.h  static_collections.h  types.h  zobrist.c  zobrist.h
engine/src/modules/game_tools/: CMakeLists.txt  board_utils.c  types.h  (+4 more)
gui/: AdrGaspard.ChokefishGUI.sln
src/host/: CMakeLists.txt  app.c  engine.c  generator.c  main.c  test.c
src/modules/ai/: consts.h  engine.c  engine.h  time_manager.c  time_manager.h  types.h
src/modules/core/: bitboard.h  board.c  board.h  castling.h  color.h  consts.h  dynamic_collections.h  enhanced_time.h  game_state.h  move.h  move_generation_result.h  move_generator.h  piece.h  piece_group.h  position.h  precomputed_board_data.c  precomputed_board_data.h  precomputed_magics.h  shared_random.c  shared_random.h  static_collections.h  static_stack.h  types.h  zobrist.c  zobrist.h  zobrist_stack.h
src/modules/game_tools/: game_data.c  game_data.h  types.h
src/modules/generation/: consts.h  generation_scheduler.h  magic_generator.c  magic_generator.h
src/modules/serialization/: board_data_serializer.c  board_data_serializer.h  consts.h  move_data.h  move_data_serializer.c  move_data_serializer.h  position_serializer.c  types.h
src/modules/test/: CMakeLists.txt  test_suite_runner.c  test_suite_runner.h  test_utils.c  test_utils.h
src/modules/uci/: CMakeLists.txt  bestmove_cmd_printer.c  bestmove_cmd_printer.h  command_debug.c  command_go.c  command_isready.c  command_ponderhit.c  command_position.c  command_quit.c  command_setoption.c  command_stop.c  command_ucinewgame.c  commands.h  consts.h  debug_printer.c  debug_printer.h  engine_options.h  engine_state.h  search_manager.c  search_manager.h  types.h  uci.c  uci.h
suite/: .gitignore  AdrGaspard.ChokefishSuite.sln
suite/AdrGaspard.ChokefishSuite.Core/: AdrGaspard.ChokefishSuite.Core.csproj  ChessEngine.cs  ChessEngineCheckOption.cs  ChessEngineException.cs  ChessEngineOption.cs  ChessEngineSpinOption.cs  ChessEngineState.cs  Commands.cs  IOTransmitter.cs  OptionHelper.cs  OptionType.cs  Responses.cs
suite/AdrGaspard.ChokefishSuite.Core/Contracts/: IChessEngine.cs
suite/AdrGaspard.ChokefishSuite.Core/GameData/: ChessBoard.cs  ChessCastlingState.cs  ChessColor.cs  ChessConsts.cs  ChessGameResult.cs  ChessMove.cs  ChessPiece.cs  ChessPieceType.cs  ChessSquare.cs  ChessTimeSystem.cs
suite/AdrGaspard.ChokefishSuite.Core/Helpers/: BoardHelper.cs  FenHelper.cs  MoveHelper.cs  OptionHelper.cs  PathHelper.cs  PieceTypeHelper.cs  SearchDebugInfosHelper.cs  SearchResultHelper.cs  SquareHelper.cs  TimeSystemHelper.cs
suite/AdrGaspard.ChokefishSuite.Core/SearchData/: SearchDebugInfos.cs  SearchResult.cs
suite/AdrGaspard.ChokefishSuite.Core/UCI/: CheckOption.cs  SpinOption.cs  UciChessEngine.cs  UciChessGuiState.cs  UciCommands.cs  UciOption.cs  UciOptionType.cs  UciResponses.cs
suite/AdrGaspard.ChokefishSuite.Core/Utils/: ChessException.cs  HypothesisResult.cs  IOTransmitter.cs  Statistics.cs
suite/AdrGaspard.ChokefishSuite.EngineTransmitter/: Program.cs
suite/AdrGaspard.ChokefishSuite.MVVM/: AdrGaspard.ChokefishSuite.MVVM.csproj  BotVsHumanMatchViewModel.cs  EngineParametersViewModel.cs  EngineSelectorViewModel.cs  IValidatable.cs  MatchMakerViewModel.cs  MatchSchedulerViewModel.cs  MatchViewModelBase.cs  RatioViewModel.cs  SchedulingRulesViewModel.cs  SearchInfosViewModel.cs
suite/AdrGaspard.ChokefishSuite.MVVM/Models/: Position.cs
suite/AdrGaspard.ChokefishSuite.UI.WPF/: AdrGaspard.ChokefishSuite.UI.WPF.csproj  App.xaml  App.xaml.cs  Program.cs
suite/AdrGaspard.ChokefishSuite.UI.WPF/Models/: Brushes.cs
suite/AdrGaspard.ChokefishSuite.UI.WPF/Resources/: CustomStyles.xaml  pos-fair.json
suite/AdrGaspard.ChokefishSuite.UI.WPF/ViewModels/: BoardViewModel.cs  MainViewModel.cs  RankViewModel.cs  SquareViewModel.cs  ViewModelLocator.cs  WpfBotVsHumanMatchViewModel.cs  WpfMatchSchedulerViewModel.cs
suite/AdrGaspard.ChokefishSuite.UI.WPF/Views/: MainWindow.xaml  MainWindow.xaml.cs
(+100 files in other folders)
